--- a/Karnaugh.html
+++ b/Karnaugh.html
@@ -9,8 +9,16 @@
 	<body>
 		
 		<header align="left">
-			<a id="logo">Визуализация карт Карно</a>
-			<h1>Визуальная модель КК</h1>
+			<table>
+				<tr>
+					<td width="80px">
+						<a id="logo">Визуализация карт Карно</a>
+					</td>
+					<td>
+						<h1>Визуальная модель КК</h1>
+					</td>
+				</tr>
+			</table>
 		</header>
 	
 		<div class="interface">
