--- a/Karnaugh.html
+++ b/Karnaugh.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Визуализация карт Карно</title>
 		<meta content="text/html; charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="styles.css"/>
+		<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 		
 	</head>
 	<body>
@@ -145,7 +145,7 @@
 		</div>
 		<footer>© Максимка 2016</footer>
 		
-		<script src="Karnaugh.js"></script>
+		<script src="script/Karnaugh.js"></script>
 		<script src="three/three.min.js"></script>
 		<script src="three/Projector.js"></script>
 		<script src="three/Detector.js"></script>
